--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test</title>
+	<title>Demo Git</title>
 </head>
 <body>
 	<h1>hello</h1>
+	<p>New Line</p>
 </body>
 </html>
